Fix the pagination link alignment

--- a/assets/scss/components/content.scss
+++ b/assets/scss/components/content.scss
@@ -98,11 +98,15 @@ main {
     a {
       border-bottom: none;
       font-weight: 600;
-      flex: 1;
       max-width: 49%;
     }
 
+    .prev {
+      margin-right: auto;
+    }
+
     .next {
+      margin-left: auto;
       text-align: right;
     }
   }
